--- a/style.css
+++ b/style.css
@@ -56,3 +56,25 @@ form {
   flex-direction: column;
   align-items: center;
 }
+
+.logout-btn {
+  width: 100px;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.delete {
+  width: 100px;
+  padding: 10px;
+  background-color: #fd3434;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  margin-top: 70px;
+}
